--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "cef0aa32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "from openaq_anomaly_prediction.config import Configuration as config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "ce48ba0d",
    "metadata": {},
    "outputs": [
@@ -10,12 +32,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n"
+      "test\n",
+      "\n",
+      "0.5\n"
      ]
     }
    ],
    "source": [
-    "print(\"test\")\n"
+    "print(\"test\")\n",
+    "print(config.getenv(\"OPENAQ_API_KEY\"))\n",
+    "print(config.VERSION)\n"
    ]
   }
  ],
