FIX: Used dotenv to load the environment variables in config

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "cef0aa32",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ce48ba0d",
    "metadata": {},
    "outputs": [
@@ -32,16 +32,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n",
-      "\n",
-      "0.5\n"
+      "openaq-api-key-placeholder\n",
+      "0.3\n"
      ]
     }
    ],
    "source": [
-    "print(\"test\")\n",
-    "print(config.getenv(\"OPENAQ_API_KEY\"))\n",
-    "print(config.VERSION)\n"
+    "# print(\"test\")\n",
+    "print(config.getenv(\"OPENAQ_API_KEY\"))"
    ]
   }
  ],
