FEAT: Added DuckDB management, Open-Meteo integration and cleaned out notebooks

--- a/notebooks/download_from_api.ipynb
+++ b/notebooks/download_from_api.ipynb
@@ -12592,36 +12592,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "52ebce80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob\n",
-    "from openaq_anomaly_prediction.utils.helpers import concat_csv_to_csv\n",
-    "\n",
-    "# CONCATENATE: Concatenate several trimesters CSVs into a single CSV file\n",
-    "selected_files = glob.glob(os.path.join(config.DATA_CSV_PATH, f\"{prefix_run_id}*.csv\"))\n",
-    "concat_csv_to_csv(selected_files, f\"{prefix_run_id}.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "861bbc1a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New Delhi 2016: (160475, 33)\n"
+      "['/home/deniscck/code/denis-cck/openaq_anomaly_prediction/data/csv/new_delhi_2025.stg.csv',\n",
+      " '/home/deniscck/code/denis-cck/openaq_anomaly_prediction/data/csv/new_delhi_2025_2025-07-01_2025-09-30.csv',\n",
+      " '/home/deniscck/code/denis-cck/openaq_anomaly_prediction/data/csv/new_delhi_2025_2025-04-01_2025-06-30.csv',\n",
+      " '/home/deniscck/code/denis-cck/openaq_anomaly_prediction/data/csv/new_delhi_2025_2025-10-01_2025-12-31.csv',\n",
+      " '/home/deniscck/code/denis-cck/openaq_anomaly_prediction/data/csv/new_delhi_2025_2025-01-01_2025-03-31.csv']\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(os.path.join(config.DATA_CSV_PATH, f\"{prefix_run_id}.csv\"))\n",
-    "print(f\"New Delhi 2016: {df.shape}\")"
+    "import glob\n",
+    "from openaq_anomaly_prediction.utils.helpers import concat_csv_to_csv\n",
+    "import os\n",
+    "# CONCATENATE: Concatenate several trimesters CSVs into a single CSV file\n",
+    "\n",
+    "staging_csv_prefix = \"new_delhi_2025\"\n",
+    "\n",
+    "selected_files = glob.glob(os.path.join(config.DATA_CSV_PATH, f\"{staging_csv_prefix}*.csv\"))\n",
+    "pprint(selected_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecc641a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[K\u001b[38;2;102;102;102m10:32:17      4/4 |   󰘍 \u001b[0m\u001b[1m\u001b[38;2;43;214;131m100%\u001b[0m\u001b[38;2;102;102;102m: \u001b[0m\u001b[38;2;102;102;102mAppending CSV files to final CSV -> data/csv/new_delhi_2025.stg.csv\u001b[0m \n"
+     ]
+    }
+   ],
+   "source": [
+    "concat_csv_to_csv(selected_files, f\"{staging_csv_prefix}.stg.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "861bbc1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "staging_csv_path = os.path.join(config.DATA_CSV_PATH, f\"{staging_csv_prefix}.stg.csv\")\n",
+    "\n",
+    "df = pd.read_csv(staging_csv_path)\n",
+    "print(f\"{staging_csv_prefix}: {df.shape}\")"
    ]
   },
   {
@@ -13901,13 +13928,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "34258a16",
    "metadata": {},
    "outputs": [],
    "source": [
     "# print(concatenated_filename)\n",
-    "df_final.to_csv(os.path.join(config.DATA_PATH, concatenated_filename), index=False)"
+    "df_final.to_csv(os.path.join(config.DATA_PATH, concatenated_filename), index=False)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
